[package]
name = "crypto_latency_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# WebSocket libraries
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
# HTTP clients
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
ureq = "2.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Time measurement
chrono = "0.4"
# Statistics
statrs = "0.17"
# Async utilities
futures-util = "0.3"
# URL handling
url = "2.5"
# High precision timing
quanta = "0.12"
# Colored output
colored = "2.1"
# Environment and secrets
dotenv = "0.15"
# Cryptography for ED25519 signatures
ring = "0.17"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# FIX protocol  
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
